test/compilable/imports/test7491c.d
module imports.test7491c;

void map(alias pred, R)(R) {}
