test/fail_compilation/test314e.d
module test314e;

import imports.test314e;

void baz()
{
    foo();
}
